# rikliaHTTP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
configs/: riklia.conf
configs/4xx/: 401.html
configs/error_pages/4xx/: 400.html  404.html  406.html
configs/error_pages/5xx/: 500.html  501.html
demo/: riklia.conf
demo/static_files_test_server/: index.html
demo/static_files_test_server/5xx/: 501.html
inc/: GlobalConfigurations.h  HTTPMessage.h  HTTPRequest.h  HTTPResponse.h  HTTPServer.h  ServerConfiguration.h  ServerLogger.h  TCPServer.h
src/: GlobalConfigurations.cpp  HTTPMessage.cpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPServer.cpp  ServerConfiguration.cpp  ServerLogger.cpp  TCPServer.cpp
src/utils/: file_utils.cpp  file_utils.h  string_utils.cpp  string_utils.h
